--- a/week1/intro-practice/index.html
+++ b/week1/intro-practice/index.html
@@ -22,7 +22,7 @@
         <p>BYU-Idaho is a comfortable place to learn and grow as a disciple of Jesus Christ because students, faculty, and employees share a commitment to live the gospel.</p>
     </main>
     <footer>
-        <p>Oats Web Page 2022 ©</p>
+        <p>My Web Page 2022 ©</p>
     </footer>
   </body>
 </html>
