--- a/wwr/site-plan-rivers.html
+++ b/wwr/site-plan-rivers.html
@@ -5,14 +5,14 @@
   <head>
     <meta charset="utf-8">
     <title>Site Plan</title>
-    <link type="text/css" rel="stylesheet" href="styles/site-plan.css">
+    <link type="text/css" rel="stylesheet" href="styles/site-plan-rafting.css">
   </head>
 
   <body>
     <header>
-      <h1>Me At A Glance Site Plan</h1>
+      <h1>Rivers Site Plan</h1>
       <h2>Oaitse Lepodise</h2>
-      <h2>WDD 130-15</h2>
+      <h2>WDD 130-[section]</h2>
       <!-- In the header above, add the name or your site, your name and class number. For example if you are in section 3 you would put WDD 130.03 -->
     </header>
     <main>
@@ -21,24 +21,17 @@
       <hr>
       <h2>Overview</h2>
       <h3>Purpose</h3>
-      <p>The purpose of creating the website is to display all my social media sites that i have accounts wih. 
-        Additionally, the website will display list of other websites that i have accounts with. 
-        When sharing this site with others, they will be able to know all about my social sites without having to go around googling my name,
-         its a way of making it easier for them to see my other profiles. 
-        
-    </p>  <!-- change this -->
+      <p>[Your purpose here]</p>  <!-- change this -->
+
 
       <h3>Audience</h3>
-      <p>The target audiece for my site is the employers. This will give them the chance to see my socials sites and be able to evaluate them for any information they need. 
-        Other target audience is my family. Giving my family memmbers especially extended family members this site, they will be able to know more about me.
-        The other target audience is me, i want to use this site as a reminder of my personal accounts i have created with other sites.
-      </p>  <!-- change this -->
+      <p>[Your audience here]</p>  <!-- change this -->
 
       <hr>
       <h2>Branding</h2>
       <h3>Website Logo</h3>
       <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-      <img src="images/rsz_me_at_a_glance-logos.jpg" alt="Logo image">
+      <img src="images/logo.png" alt="Logo Image">
       <hr>
       <h2>
         Style Guide
@@ -52,13 +45,13 @@
       <!--  The colors you choose for a website are one of the most important decisions you will make. Follow the instructions on the activity in iLearn then return and replace the color codes below with the hex color codes (the 6 digit numbers that show at the bottom of each color) for the colors you have chosen below.  You should have at least 2 colors but do not have to fill in all 4 if you do not need them.  -->
 
       <!-- Copy and paste the URL to your finished palette below Make sure to paste it into both spots -->
-      Palette URL: <a href="https://coolors.co/2bec2b-5850ee-e9a48b-eb7ed0-a7a1a1" target="_blank">https://coolors.co/2bec2b-5850ee-e9a48b-eb7ed0-a7a1a1</a>
+      Palette URL: <a href="https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c" target="_blank">https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c</a>
 
 
       <table class="colors">
         <tr><th>Primary</th><th>Secondary</th><th>Accent 1</th><th>Accent 2</th></tr>
         <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
-        <tr><td class="primary">[#2BEC2B]</td><td class="secondary">[#5850EE]</td><td class="accent1">[#E9A48B]</td><td class="accent2">[#EB7ED0]</td></tr>
+        <tr><td class="primary">[#396E94]</td><td class="secondary">[#E7C24F]</td><td class="accent1">[#A43312]</td><td class="accent2"></td></tr>
       </table>
 
       <!-- ------------------------Step 9------------------------------ -->
@@ -69,10 +62,10 @@
       <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Why did you choose what you did?  Make sure to review the list of web safe fonts at W3Schools.org as a starting point.  Think also about which of your colors above you might use for background and font colors. -->
 
       <h4>
-        Heading Font: Ubuntu <!-- change this -->
+        Heading Font: [Font Name here]  <!-- change this -->
       </h4>
       <h4>
-        Paragraph Font: Open Sans  <!-- change this -->
+        Paragraph Font: [Font Name here]  <!-- change this -->
       </h4>
       <h3>
         Normal paragraph example
