personal site plan completed

--- a/myaccounts/site-plan.html
+++ b/myaccounts/site-plan.html
@@ -133,9 +133,9 @@
       <h3>Home page</h3>
       <p>
         The purpose of this website is to provide information about me that will be helpful to anyone who have access to the website. Please feel free to browse through.
-        My names
+        Who is Oaitse:
         My name is Oaitse Lepodise, born in a village called Diphale (Kweneng District) in Botswana. I was born in 1986. Some of my nicknames that other people might remember are; Setogo, Togo, Mabizela, Leponesa, Matoni, Bizolo. 
-        I lived most of my life in Molepolole village where I did Standard on to seven in Neale Primary School. Form one to three, I was in Sedumedi Junior Secondary School and then form four and five in KS2 (Kgosi Kgari Schele Senior Secondary School).
+        I lived most of my life in Molepolole village where I did Standard one to seven in Neale Primary School. Form one to three, I was in Sedumedi Junior Secondary School and then form four and five in KS2 (Kgosi Kgari Schele Senior Secondary School).
          Then I moved to tertiary and studied Software development at NIIT which changed its name to Botho University.
         I love going to the cattle post because that is where I used to go when the schools were closed to see my grandparents and my mother. I used to take care of the cattle and I was considered the best in my community.
         Social Media Site
@@ -215,8 +215,8 @@
 
       </p>
       <p>Images for My Work</p>
-        <img src="images/rsz_lds.jpg" alt="church of Jesus churchofjesuschrist">
-        <img src="images/rsz_familysearch.png" alt="familysearch">
+        <img src="images/work.png" alt="church of Jesus churchofjesuschrist">
+        <img src="images/home.png" alt="familysearch">
 
       </ul>
       <hr>
@@ -230,19 +230,19 @@
       <p>         
         [Any additional details about home that the wireframe does not make clear]
       </p>
-      <img src="#" alt="home page wireframe">
+      <img src="images/home-page-wireframe.PNG" alt="home page wireframe">
 
       <h3>Family</h3>
       <p>         
-        [Any additional details about page 2 that the wireframe does not make clear]
+        
       </p>
-      <img src="#" alt="page 2 wireframe">
+      <img src="images/Family-wireframe.PNG" alt="page 2 wireframe">
 
       <h3>My Work</h3>
       <p>         
-        [Any additional details about page 3 that the wireframe does not make clear]
+        
       </p>
-      <img src="#" alt="page 3 wireframe">
+      <img src="images/My-work-wireframe.PNG" alt="page 3 wireframe">
     </main>
   </body>
 
