--- a/wwr/contactus.html
+++ b/wwr/contactus.html
@@ -26,41 +26,24 @@
 
             <main class="contactus-grid">
                 <div id="feedback">Feeback here</div>
-                <form action="/my-handling-form-page" method="post" align="center">
-                    <table align="center">
-                        <tr>
-                            <td>
-                                <label for="name">Name:</label>
-                            </td>
-                            <td>
-                                <input type="text" id="name" name="user_name" />
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <label for="mail">E-mail:</label>
-                            </td>
-                            <td>
-                                <input type="email" id="mail" name="user_email" />
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <label for="msg">Message:</label>
-                            </td>
-                            <td>
-                                <textarea id="msg" name="user_message"></textarea>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-
-                            </td>
-                            <td>
-                                <button type="submit">Send Message</button>
-                            </td>
-                        </tr>
-                    </table>
+                <form action="/my-handling-form-page" method="post">
+                    <ul>
+                      <li>
+                        <label for="name">Name:</label>
+                        <input type="text" id="name" name="user_name" />
+                      </li>
+                      <li>
+                        <label for="mail">E-mail:</label>
+                        <input type="email" id="mail" name="user_email" />
+                      </li>
+                      <li>
+                        <label for="msg">Message:</label>
+                        <textarea id="msg" name="user_message"></textarea>
+                      </li>
+                      <li class="button">
+                        <button type="submit">Send your message</button>
+                      </li>
+                    </ul>
                   </form>
             </main>
 
