--- a/wwr/index.html
+++ b/wwr/index.html
@@ -19,7 +19,7 @@
                     <a href="rivers.html">Rivers</a>
                     <a href="site-plan-rafting.html">Site Plan</a>
                     <a href="contactus.html">Contact Us</a>
-                    <a href="contactus.html">Component</a>
+                    <a href="component.html">Component</a>
                 </nav>
             </header>
 
